--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="collapse navbar-collapse" id="example-nav-collapse">
           <ul class="nav navbar-nav">
             
-            <li><a href="#featuresTab"><span class="subFont"><strong>Características.</strong></span></a></li>
+            <li><a href="#featuresTab"><span class="subFont"><strong>Reparaciones</strong></span></a></li>
             <li><a href="https://www.configuroweb.com/"><span class="subFont"><strong>Nosotros</strong></span></a></li>
             <li><a href="#feedbackTab"><span class="subFont"><strong>Retro alimentación</strong></span></a></li>
           
