--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="col-sm-12 text-center">
             <div class="page-header" style="padding-top:50px;padding-bottom:50px">
               <h1 class="normalFont" style="font-size:44px;" >¿Qué es esto?</h1>
-              <p class="subFont" style="font-size:24px;"><em>Una forma interactiva de resolver la votación convencional.</em></p>
+              <p class="subFont" style="font-size:24px;"><em>Servicio tecnico especializado.</em></p>
             </div>
           </div>
         </div>
